add tf-idf transformation

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,192 +2,184 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] [Errno 20] Not a directory:\n",
+      "[nltk_data]     '/home/alpha/nltk_data/corpora/dolch/README'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from lxml import etree"
+    "import string\n",
+    "from lxml import etree\n",
+    "import nltk\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "nltk.download(\"all\", quiet=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(\"MsgLog_2017-01-24-011347.xml\", \"rt\") as f:\n",
     "    s = f.read()\n",
-    "    \n",
     "parser = etree.XMLParser(recover=True)\n",
     "tree = etree.fromstring(s, parser=parser)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0\n",
-      "\n",
-      "1\n",
-      "\t\n",
-      " \n",
-      "\n",
-      "Debra Perlingiere\n",
-      "Enron North America Legal\n",
-      "1400 Smith Street, EB 3885\n",
-      "Houston, Texas 77002\n",
-      "Debra.Perlingiere@enron.com\n",
-      "713-853-7658\n",
-      "713-646-3490 Fax\n",
-      "\n",
-      "\n",
-      "\n",
-      "***********\n",
-      "EDRM Enron Email Data Set has been produced in EML, PST and NSF format by ZL Technologies, Inc. This Data Set is licensed under a Creative Commons Attribution 3.0 United States License <http://creativecommons.org/licenses/by/3.0/us/> . To provide attribution, please cite to \"ZL Technologies, Inc. (http://www.zlti.com).\"\n",
-      "***********\n",
-      "\n",
-      "2\n",
-      "Thanks Robin !!  Look forward to future business \n",
-      "\n",
-      " -----Original Message-----\n",
-      "From: \t\"Robin Masciangelo\" <rmasciangelo@duke-energy.com>@ENRON  \n",
-      "Sent:\tFriday, October 26, 2001 9:54 AM\n",
-      "\n",
-      "3\n",
-      "\n",
-      " Regarding the GISB,  issues remaining are Section 3.2 Performance Obl.  we perfer Spot Standard.  They argue     the Cilco city gate does not have a \"Spot Market\" .  If the city gate is their end user I will give on this point.  Tammy is checking to see if this is their only customer.  \n",
-      "\n",
-      "\n",
-      "Debra Perlingiere\n",
-      "Enron North America Legal\n",
-      "1400 Smith Street, EB 3885\n",
-      "Houston, Texas 77002\n",
-      "Debra.Perlingiere@enron.com\n",
-      "713-853-7658\n",
-      "713-646-3490 Fax\n",
-      "\n",
-      "\n",
-      "\n",
-      "***********\n",
-      "EDRM Enron Email Data Set has been produced in EML, PST and NSF format by ZL Technologies, Inc. This Data Set is licensed under a Creative Commons Attribution 3.0 United States License <http://creativecommons.org/licenses/by/3.0/us/> . To provide attribution, please cite to \"ZL Technologies, Inc. (http://www.zlti.com).\"\n",
-      "***********\n",
-      "\n",
-      "4\n",
-      "\n",
-      " Robin, \n",
-      "Attached is the final version of the Master Agreement.  If in agreement, please print and execute two originals and return same to my attention.  Upon final exeuction, I will forward an original for your records.  Please do not hesitate to give me call should you have an additional questions or comments regarding the enclosed.\n",
-      "\n",
-      "\n",
-      "\n",
-      "Debra Perlingiere\n",
-      "Enron North America Legal\n",
-      "1400 Smith Street, EB 3885\n",
-      "Houston, Texas 77002\n",
-      "Debra.Perlingiere@enron.com\n",
-      "713-853-7658\n",
-      "713-646-3490 Fax\n",
-      "\n",
-      "\n",
-      "\n",
-      "***********\n",
-      "EDRM Enron Email Data Set has been produced in EML, PST and NSF format by ZL Technologies, Inc. This Data Set is licensed under a Creative Commons Attribution 3.0 United States License <http://creativecommons.org/licenses/by/3.0/us/> . To provide attribution, please cite to \"ZL Technologies, Inc. (http://www.zlti.com).\"\n",
-      "***********\n",
-      "\n",
-      "5\n",
-      "\n",
-      " The following Amendments have been fully exeucted:\n",
-      " Laurens,The Energy Authority, and eprime.\n",
-      "\n",
-      " These amendments have been sent for signature:\n",
-      "\n",
-      " TXU, Phillips, PSEG, and  \n",
-      "\n",
-      "Debra Perlingiere\n",
-      "Enron North America Legal\n",
-      "1400 Smith Street, EB 3885\n",
-      "Houston, Texas 77002\n",
-      "Debra.Perlingiere@enron.com\n",
-      "713-853-7658\n",
-      "713-646-3490 Fax\n",
-      "\n",
-      "\n",
-      "\n",
-      "***********\n",
-      "EDRM Enron Email Data Set has been produced in EML, PST and NSF format by ZL Technologies, Inc. This Data Set is licensed under a Creative Commons Attribution 3.0 United States License <http://creativecommons.org/licenses/by/3.0/us/> . To provide attribution, please cite to \"ZL Technologies, Inc. (http://www.zlti.com).\"\n",
-      "***********\n",
-      "\n",
-      "6\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "for i, elem in enumerate(tree.iter(tag=\"Body\")):\n",
-    "    print(elem.text)\n",
-    "    print(i)\n",
-    "    if i > 5: break"
+    "english_words = set(nltk.corpus.words.words('en'))\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "ps = PorterStemmer()\n",
+    "lt = WordNetLemmatizer()\n",
+    "\n",
+    "s = s.translate(str.maketrans('','',string.punctuation))\n",
+    "s = s.translate(str.maketrans('','',string.digits))\n",
+    "s = s.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "body_texts = sum((word_tokenize(body.text \\\n",
+    "                                .translate(str.maketrans('','',string.punctuation)) \\\n",
+    "                                .translate(str.maketrans('','',string.digits)))\n",
+    "                  for body in tree.iter(tag=\"Body\")), [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "body_texts = [word for word in body_texts\n",
+    "              if word in english_words and word not in stop_words]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessing = \"lemmatize\"\n",
+    "if preprocessing == \"stem\":\n",
+    "    body_texts = [ps.stem(word) for word in body_texts]\n",
+    "elif preprocessing == \"lemmatize\":\n",
+    "    body_texts = [lt.lemmatize(word) for word in body_texts]\n",
+    "    \n",
+    "text_string = \" \".join(body_texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "vect = TfidfVectorizer()\n",
+    "tfidf = vect.fit_transform([text_string])\n",
+    "tfidf_words = pd.Series(tfidf.toarray().flatten(), index=vect.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "True"
+       "neanderthal       0.000241\n",
+       "shipboard         0.000241\n",
+       "shirley           0.000241\n",
+       "insurmountable    0.000241\n",
+       "bonfire           0.000241\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import nltk\n",
-    "nltk.download()"
+    "tfidf_words.sort_values().head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LookupError",
-     "evalue": "\n**********************************************************************\n  Resource 'tokenizers/punkt/PY3/english.pickle' not found.\n  Please use the NLTK Downloader to obtain the resource:  >>>\n  nltk.download()\n  Searched in:\n    - '/home/joe/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n    - ''\n**********************************************************************",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3793a7ecc362>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mEXAMPLE_TEXT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Hello Mr. Smith, how are you doing today? The weather is great, and Python is awesome. The sky is pinkish-blue. You shouldn't eat cardboard.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEXAMPLE_TEXT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/upwork/flamingo/.env/lib/python3.5/site-packages/nltk/tokenize/__init__.py\u001b[0m in \u001b[0;36msent_tokenize\u001b[0;34m(text, language)\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[0;34m:\u001b[0m\u001b[0mparam\u001b[0m \u001b[0mlanguage\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mPunkt\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \"\"\"\n\u001b[0;32m---> 96\u001b[0;31m     \u001b[0mtokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tokenizers/punkt/{0}.pickle'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     97\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/upwork/flamingo/.env/lib/python3.5/site-packages/nltk/data.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(resource_url, format, cache, verbose, logic_parser, fstruct_reader, encoding)\u001b[0m\n\u001b[1;32m    812\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    813\u001b[0m     \u001b[0;31m# Load the resource.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 814\u001b[0;31m     \u001b[0mopened_resource\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_open\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresource_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    815\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    816\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mformat\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'raw'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/upwork/flamingo/.env/lib/python3.5/site-packages/nltk/data.py\u001b[0m in \u001b[0;36m_open\u001b[0;34m(resource_url)\u001b[0m\n\u001b[1;32m    930\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    931\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mprotocol\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'nltk'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 932\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    933\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'file'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    934\u001b[0m         \u001b[0;31m# urllib might not use mode='rb', so handle this one ourselves:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/upwork/flamingo/.env/lib/python3.5/site-packages/nltk/data.py\u001b[0m in \u001b[0;36mfind\u001b[0;34m(resource_name, paths)\u001b[0m\n\u001b[1;32m    651\u001b[0m     \u001b[0msep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'*'\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    652\u001b[0m     \u001b[0mresource_not_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'\\n%s\\n%s\\n%s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 653\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mLookupError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresource_not_found\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    654\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    655\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mLookupError\u001b[0m: \n**********************************************************************\n  Resource 'tokenizers/punkt/PY3/english.pickle' not found.\n  Please use the NLTK Downloader to obtain the resource:  >>>\n  nltk.download()\n  Searched in:\n    - '/home/joe/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n    - ''\n**********************************************************************"
-     ]
+     "data": {
+      "text/plain": [
+       "licensed    0.286032\n",
+       "produced    0.286756\n",
+       "format      0.289894\n",
+       "provide     0.308239\n",
+       "please      0.415652\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "\n",
-    "EXAMPLE_TEXT = \"Hello Mr. Smith, how are you doing today? The weather is great, and Python is awesome. The sky is pinkish-blue. You shouldn't eat cardboard.\"\n",
-    "\n",
-    "print(sent_tokenize(EXAMPLE_TEXT))"
+    "tfidf_words.sort_values().tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_words.to_csv(\"TF_Body.csv\")"
    ]
   },
   {
